--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#svg {
+  width: 300px;
+  height: 300px;
+  border: 1px solid #000000;
+  display: block;
+}
 html {
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
