--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ table  { border-collapse: collapse; width: 100%; }
 .DtaMedia2 {
   background-color: #eaf84c;
 }
+.DtaMedia2a {
+  background-color: #ff8c00;
+}
 
 .collDesc {
   background-color: white;
